@@ -28,6 +28,7 @@ public class CrateInstance implements Serializable {
     private final String taskId;
     private final String hostname;
     private final String version;
+    private final int httpPort;
     private final int transportPort;
     private final String executorID;
     private final String slaveID;
@@ -39,11 +40,12 @@ public class CrateInstance implements Serializable {
         RUNNING
     }
 
-    public CrateInstance(String hostname, String taskId, String version, int transportPort,
+    public CrateInstance(String hostname, String taskId, String version, int httpPort, int transportPort,
                          String executorID, String slaveID) {
         this.taskId = taskId;
         this.hostname = hostname;
         this.version = version;
+        this.httpPort = httpPort;
         this.transportPort = transportPort;
         this.executorID = executorID;
         this.slaveID = slaveID;
@@ -75,6 +77,10 @@ public class CrateInstance implements Serializable {
         return version;
     }
 
+    public Integer httpPort() {
+        return httpPort;
+    }
+
     public int transportPort() {
         return transportPort;
     }
@@ -89,6 +95,7 @@ public class CrateInstance implements Serializable {
                 "taskId='" + taskId + '\'' +
                 ", hostname='" + hostname + '\'' +
                 ", version='" + version + '\'' +
+                ", httpPort=" + httpPort +
                 ", transportPort=" + transportPort +
                 ", state=" + state +
                 '}';
