@@ -1,5 +1,6 @@
 package io.crate.frameworks.mesos.config;
 
+import io.crate.frameworks.mesos.CrateState;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -14,6 +15,7 @@ import static org.hamcrest.core.Is.is;
 public class ResourcesTest {
 
     private Configuration configuration;
+    private CrateState state;
 
     @Before
     public void setUp() throws Exception {
@@ -22,27 +24,30 @@ public class ResourcesTest {
         configuration.resMemory = 1024d * 8;
         configuration.resHeap = 1024d * 4;
         configuration.resDisk = 1024d * 20;
-        configuration.httpPort = 4200;
+
+        state = new CrateState();
+        state.httpPort(4200);
+        state.transportPort(4300);
     }
 
     @Test
     public void testMatchesWithOfferThatHasToFewCpus() throws Exception {
-        assertThat(Resources.matches(Arrays.asList(cpus(1), mem(20_000)), configuration), is(false));
+        assertThat(Resources.matches(Arrays.asList(cpus(1), mem(20_000)), configuration, state), is(false));
     }
 
     @Test
     public void testMatchesWithOfferThatHasNotEnoughMemory() throws Exception {
-        assertThat(Resources.matches(Arrays.asList(cpus(4), mem(512)), configuration), is(false));
+        assertThat(Resources.matches(Arrays.asList(cpus(4), mem(512)), configuration, state), is(false));
     }
 
     @Test
     public void testMatchesWithOfferThatHasNoRequestedPorts() throws Exception {
-        assertThat(Resources.matches(Arrays.asList(cpus(4), mem(512), ports(3000, 4000)), configuration), is(false));
+        assertThat(Resources.matches(Arrays.asList(cpus(4), mem(512), ports(3000, 4000)), configuration, state), is(false));
     }
 
     @Test
     public void testMatchesWithOfferThatHasEnough() throws Exception {
-        assertThat(Resources.matches(Arrays.asList(cpus(4), mem(20_000), ports(4000, 5000)), configuration), is(true));
+        assertThat(Resources.matches(Arrays.asList(cpus(4), mem(20_000), ports(4000, 5000)), configuration, state), is(true));
     }
 
     @Test
@@ -51,6 +56,6 @@ public class ResourcesTest {
                 cpus(4),
                 mem(20_000),
                 ports(4200, 4200),
-                ports(4300, 4300)), configuration), is(true));
+                ports(4300, 4300)), configuration, state), is(true));
     }
 }
